# Innotter

./: .env  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
CoreApp/: django-entrypoint.sh  manage.py
CoreApp/CoreApp/: asgi.py  settings.py  urls.py  wsgi.py
CoreApp/InnotterPage/: admin.py  apps.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  utils.py  validators.py  views.py
CoreApp/InnotterTag/: admin.py  apps.py  mixins.py  models.py  serializers.py  urls.py  views.py
CoreApp/InnotterUser/: admin.py  apps.py  backends.py  mixins.py  models.py  permissions.py  renderers.py  roles.py  serializers.py  urls.py  views.py
CoreApp/innotter_like/: admin.py  apps.py  mixins.py  models.py  permissions.py  serializers.py  services.py  urls.py
CoreApp/innotter_post/: admin.py  apps.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
CoreApp/subscribe_request/: admin.py  apps.py  mixins.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
core_app/: celery-entrypoint.sh  manage.py  producer.py  pytest.ini
core_app/core_app/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
core_app/innotter_like/: admin.py  apps.py  mixins.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
core_app/innotter_page/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
microservice/: main.py  pika_client.py  settings.py
(+96 files in other folders)
