[tool.poetry]
name = "coreapp"
version = "0.1.0"
description = ""
authors = ["Anton <antonzakhlebayeu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
PyJWT = "^2.4.0"
reference = "^0.0.3"
eastern = "^5.0.0"
admin = "^0.0.1"
replies = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
